examples/test/testpolicy17974.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy17974
  namespace: namespace367
spec:
  podSelector:
    matchLabels:
      key10: value19
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key39: value22
      podSelector:
        matchLabels:
          key7: value33
          key24: value35
          key8: value27
